[fix zoom on safari and add button clarity]

--- a/style.css
+++ b/style.css
@@ -76,7 +76,7 @@
 }
 
 .textBody {
-  margin-top: 20%;
+  margin-top: 10%;
   margin-left: 2.5rem;
 }
 
